# Generated by configure.  Do no edit.

2010-12-26  Patrick Ohly  <patrick.ohly@intel.com>

	* NEWS:

	NEWS: added release date

2010-12-26  Patrick Ohly  <patrick.ohly@intel.com>

	* configure-pre.in:

	bumped version to 1.1.1

2010-12-26  Patrick Ohly  <patrick.ohly@intel.com>

	* NEWS:

	NEWS: updated in response to 1.1.0.99.1 testing + feedback

2010-12-20  Patrick Ohly  <patrick.ohly@intel.com>

	* configure-pre.in:

	bumped version to 1.1.0.99.1

2010-12-20  Patrick Ohly  <patrick.ohly@intel.com>

	* NEWS:

	NEWS: updated for 1.1.0.99.1

2010-12-15  Jussi Kukkonen  <jku@linux.intel.com>

	* src/dbus/interfaces/syncevo-server-full.xml:
	* src/dbus/interfaces/syncevo-session-full.xml:
	* src/dbus/syncevo-server.c:
	* src/gtk-ui/sync-config-widget.c:
	* src/gtk-ui/sync-ui.c:

	gtk-ui: Use "no-sync" flag on non syncing StartSession

2010-12-15  Jussi Kukkonen  <jku@linux.intel.com>

	* src/dbus/syncevo-session.c:
	* src/dbus/syncevo-session.h:

	dbus client wrapper: add GetConfigName

2010-11-11  Jussi Kukkonen  <jku@linux.intel.com>

	* src/dbus/syncevo-server.c:
	* src/dbus/syncevo-server.h:
	* src/gtk-ui/sync-ui.c:

	gtk-ui: Update GetPresence handlers to match current API

2010-11-11  Jussi Kukkonen  <jku@linux.intel.com>

	* src/gtk-ui/sync-ui.c:

	gtk-ui: match config names insensitively

2010-11-11  Jussi Kukkonen  <jku@linux.intel.com>

	* src/gtk-ui/sync-ui.c:

	gtk-ui: Use hyphen instead of underscore in signal names

2010-12-15  Patrick Ohly  <patrick.ohly@intel.com>

	* src/backends/evolution/EvolutionCalendarSource.cpp:

	Evolution Calendar: work around delayed update in EDS CalDAV
	backend (BMC #10265)

2010-12-14  Patrick Ohly  <patrick.ohly@intel.com>

	* README.rst:
	* src/syncevo/Cmdline.cpp:
	* src/syncevo/SyncConfig.cpp:
	* src/templates/servers/ScheduleWorld.ini:

	ScheduleWorld: disabled configuration, replaced in examples

2010-12-13  Patrick Ohly  <patrick.ohly@intel.com>

	* src/syncevo/configs/remoterules/server/00_sony_ericsson.xml:
