@@ -1,5 +1,11 @@
 # Generated by configure.  Do no edit.
 
+2011-01-02 Patrick Ohly <patrick.ohly@intel.com>
+
+        * src/syncevo-dbus-server.cpp
+
+        deal with libnotify 0.5.x compile error (BMC #10453)
+
 2010-12-26  Patrick Ohly  <patrick.ohly@intel.com>
 
 	* NEWS:
